# pyBasket

./: .gitignore  Pipfile  README.md  debug_trial.py  environment.yml  pyproject.toml  run_viewer.sh  test.py
Velodrome/: FuncVelov3.py  LoadData.py  NetVelo.py  TestLoadData.py  TestVelodrome.py  TrainLoadData.py  TrainVelodrome.py  Velodrome.py
Velodrome Train/: FuncVelov3.py  Velodrome.py
Velodrome_Test/: FuncVelov3.py  NetVelo.py  TestGrad.py  TestLoadData.py  TestVelodrome.py
mainApp/: Home.py  analysis.py  common.py  explorer.py  importance.py  interpretation.py  processing.py
notebooks/: analysis_GDSC_Bortezomib.ipynb  analysis_GDSC_Docetaxel.ipynb  analysis_GDSC_Gemcitabine.ipynb  analysis_GDSC_Paclitaxel.ipynb  basket_analysis_Bortezomib_cluster_10.ipynb  basket_analysis_Bortezomib_cluster_5.ipynb  basket_analysis_Docetaxel_cluster_10.ipynb  basket_analysis_Docetaxel_cluster_5.ipynb  basket_analysis_Erlotinib_cluster_10.ipynb  basket_analysis_Erlotinib_cluster_5.ipynb  basket_analysis_GDSC_Bortezomib.ipynb  basket_analysis_GDSC_Erlotinib.ipynb  basket_analysis_synthetic_1.ipynb  basket_analysis_synthetic_2.ipynb  clustering.ipynb  clustering_0.p  clustering_1.p  clustering_GDSC.ipynb  clustering_model_example_1.ipynb  clustering_model_example_2.ipynb  clustering_synthetic_multivariate.ipynb  example_bhm.ipynb  example_bhm_with_clustering.ipynb  example_bhm_with_interim_checks.ipynb  example_calibration.ipynb  example_cbhm.ipynb  example_vemurafenib.ipynb  initial_codes.ipynb  logres_0.p  logres_1.p  patient_analysis_Bortezomib_cluster_10.ipynb  (+17 more)
(+43 files in other folders)
