[tool.poetry]
name = "pybasket"
version = "0.1.0"
description = "Incorporating omics clustering for Bayesian basket trial design"
authors = ["Joe Wandy <joe.wandy@glasgow.ac.uk>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
numpy = "1.23.5"
pandas = "^1.5.2"
scipy = "^1.9.3"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
scikit-learn = "^1.1.3"
loguru = "^0.7.0"
jupyterlab = "^3.5.0"
ipywidgets = "^8.0.2"
tqdm = "^4.65.0"
pymc = "4.2.2"
arviz = "0.14.0"
graphviz = "^0.20.1"
statsmodels = "^0.14.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
autopep8 = "^2.0.2"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
